--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,10 @@ FROM continuumio/miniconda3
 
 ENV ARGS=''
 
-COPY . /app
-WORKDIR /app
-
 RUN pip install nanome
 RUN conda install -c openbabel openbabel
 
-CMD python run.py -a ${ARGS}
+COPY . /app
+WORKDIR /app
+
+CMD python run.py ${ARGS}
