--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM nanome/nanobabel
-ENV ARGS="-a plugins.nanome.ai"
+ENV ARGS=""
 
 RUN apt install software-properties-common
 RUN add-apt-repository -y ppa:deadsnakes/ppa
