--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,18 +1,10 @@
 FROM nanome/nanobabel
 ENV ARGS=""
 
-RUN apt install software-properties-common
-RUN add-apt-repository -y ppa:deadsnakes/ppa
-RUN apt update
-RUN apt install -y python3.7
-RUN apt install -y python3-pip
-
-RUN pip3 install --upgrade pip
-
 ARG CACHEBUST
-RUN python3.7 -m pip install nanome
+RUN pip3 install nanome
 
 COPY . /app
 WORKDIR /app
 
-CMD python3.7 run.py ${ARGS}
+CMD python3 run.py ${ARGS}
