--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-.vscode/
 __pycache__
-build/
-nanome_docking.egg-info/
-dist/
-docker/.cachebust
-*.pyc
-nanome
-nanome_docking/Rh_x64.exe
-.DS_Store
+/.vscode
+/build
+/dist
+/docker/.cachebust
+/nanome_docking/Rh_x64.exe
+*.egg-info
+*.log
