Add conda environment for Autodock4,

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,9 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
+# Set up conda environment for autodock4
+RUN conda env create -f nanome_docking/autodock4/environment.yml
+
 ENV SMINA_BINARY=nanome_docking/smina/smina_binary
 RUN chmod +x  $SMINA_BINARY
 CMD python run.py ${ARGS}
