--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,7 @@
     "LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}"
   },
 
+  // Set *default* container specific settings.json values on container create.
   "settings": {
     "python.languageServer": "Pylance",
     "python.analysis.extraPaths": ["/opt/conda/lib/python3.7/site-packages"],
