--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,9 +9,12 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-# Set up conda environment for autodock4
-RUN conda install -c ccsb-scripps vina
+# Set up conda environment for adfr-suite functions for vina prep that require python 2.7
 RUN conda env create --file /app/nanome_docking/autodock4/adfr-suite.yml
+
+# Ensure executables are executable.
 ENV SMINA_BINARY=nanome_docking/smina/smina_binary
+ENV VINA_BINARY=nanome_docking/autodock4/vina_1.2.2_linux_x86_64
 RUN chmod +x  $SMINA_BINARY
+RUN chmod +x  $VINA_BINARY
 CMD python run.py ${ARGS}
