--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -43,5 +43,8 @@ RUN cat /tmp/.bashrc >> ~/.bashrc
 # Install nanome-lib
 RUN pip install nanome autopep8
 
+# Set up conda environment for Python 2.7 scripts
+RUN conda env update --file nanome_docking/autodock4/adfr-suite.yml
+
 ENTRYPOINT [ "/usr/local/share/docker-init.sh" ]
 CMD [ "sleep", "infinity" ]
