--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,8 +9,10 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-# Set up conda environment for adfr-suite functions for vina prep that require python 2.7
+# Set up conda environment for adfr-suite functions for vina prep steps that require python 2.7
 RUN conda env create --file /app/nanome_docking/autodock4/adfr-suite.yml
+
+RUN conda install -c conda-forge openbabel
 
 # Ensure executables are executable.
 ENV SMINA_BINARY=nanome_docking/smina/smina_binary
