Fix autodock4 Calculator (#9)
*    Pretty much total rewrite of the the Autodock4Calculator
*    Remove unused code on the DockingMenu
*    Run python2 code in a new conda environment
*    Use Openbabel for converting pdbqt to pdb

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,11 +7,18 @@ ARG CACHEBUST
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
+# adfr-suite functions required for autodock4. Requires separate python 2.7 environment.
+COPY adfr-suite.yml .
+RUN conda env create --file adfr-suite.yml
+
 COPY . .
 
-# Set up conda environment for autodock4
-RUN conda env create -f nanome_docking/autodock4/environment.yml
+# Openbabel also required for autodock4
+RUN conda install -c conda-forge openbabel
 
+# Ensure executables are executable.
 ENV SMINA_BINARY=nanome_docking/smina/smina_binary
+ENV VINA_BINARY=nanome_docking/autodock4/vina_1.2.2_linux_x86_64
 RUN chmod +x  $SMINA_BINARY
+RUN chmod +x  $VINA_BINARY
 CMD python run.py ${ARGS}
