--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "program": "run.py",
             "console": "integratedTerminal",
-            "args": ["smina", "-r", "-v", "-n", "[wip]-smina-docking"],
+            "args": ["smina", "-v", "-n", "[wip]-smina-docking"],
             "justMyCode": false
         },
         {
@@ -16,7 +16,7 @@
             "request": "launch",
             "program": "run.py",
             "console": "integratedTerminal",
-            "args": ["autodock4", "-r", "-v", "-n", "[wip]-autodock4-docking"],
+            "args": ["autodock4", "-v", "-n", "[wip]-autodock4-docking"],
             "justMyCode": false
         },
         {
@@ -25,7 +25,7 @@
             "request": "launch",
             "program": "run.py",
             "console": "integratedTerminal",
-            "args": ["rhodium", "-r", "-v", "-n", "[wip]-rhodium-docking"],
+            "args": ["rhodium", "-v", "-n", "[wip]-rhodium-docking"],
             "justMyCode": false
         },
     ]
