Add build arg to not try installing autodock4 dependencies

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,20 +4,31 @@ ENV ARGS=''
 WORKDIR /app
 
 ARG CACHEBUST
+
+# Set Arg to anything to avoid installing Autodock4 dependencies.
+ARG EXCLUDE_AUTODOCK4
+
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-# adfr-suite functions required for autodock4. Requires separate python 2.7 environment.
 COPY adfr-suite.yml .
-RUN conda env create --file adfr-suite.yml
-# Openbabel also required for autodock4
-RUN conda install -c conda-forge openbabel
+
+RUN if [ ! -z "$EXCLUDE_AUTODOCK4" ]; \
+    then \
+    echo "Installing Autodock4 requirements from Conda." \
+    # adfr-suite functions required for autodock4. Requires separate python 2.7 environment.
+    && conda env create --file adfr-suite.yml \
+    # Openbabel also required for autodock4
+    && conda install -c conda-forge openbabel; \
+    else \
+    echo "Not installing Autodock4 requirements"; \
+    fi
 
 COPY . .
 
 # Ensure executables are executable.
 ENV SMINA_BINARY=nanome_docking/smina/smina_binary
 ENV VINA_BINARY=nanome_docking/autodock4/vina_1.2.2_linux_x86_64
-RUN chmod +x  $SMINA_BINARY
-RUN chmod +x  $VINA_BINARY
+RUN chmod +x $SMINA_BINARY
+RUN chmod +x $VINA_BINARY
 CMD python run.py ${ARGS}
