Multi stage dockerfile (#14)
* Set up multi stage builds to separate algorithm builds

* Only visualize scores if that setting enabled

* remove EXCLUDE_AUTODOCK4 build-arg

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,34 +1,36 @@
-FROM nanome/plugin-env
-
-ENV ARGS=''
-WORKDIR /app
-
+ARG ALGORITHM=smina
 ARG CACHEBUST
 
-# Set Arg to anything to avoid installing Autodock4 dependencies.
-ARG EXCLUDE_AUTODOCK4
+# Multiple build options based on ALGORITHM build-arg
+# Avoids installing uneecessary dependencies and long build times
 
+# This part runs for every algorithm install
+FROM nanome/plugin-env AS base
+ENV ARGS=''
+WORKDIR /app
 COPY requirements.txt .
+ENV ALGORITHM=smina
 RUN pip install -r requirements.txt
-
-COPY adfr-suite.yml .
-
-# Install autodock4 requirements unless build-arg passed saying not to 
-RUN if [ -z "$EXCLUDE_AUTODOCK4" ]; \
-    then \
-    # adfr-suite functions required for autodock4. Requires separate python 2.7 environment.
-    conda env create --file adfr-suite.yml \
-    # Openbabel also required for autodock4
-    && conda install -c conda-forge openbabel; \
-    else \
-    echo "Not installing Autodock4 requirements"; \
-    fi
 
 COPY . .
 
-# Ensure executables are executable.
+# Section of build that runs when smina selected (Default)
+FROM base AS smina-build
+RUN echo "ALGORITHM=smina"
 ENV SMINA_BINARY=nanome_docking/smina/smina_binary
-ENV VINA_BINARY=nanome_docking/autodock4/vina_1.2.2_linux_x86_64
 RUN chmod +x $SMINA_BINARY
+
+# Section of build that runs when autodock4 selected
+FROM base AS autodock4-build
+RUN echo "ALGORITHM=autodock4"
+ENV ALGORITHM=autodock4
+ENV VINA_BINARY=nanome_docking/autodock4/vina_1.2.2_linux_x86_64
+COPY adfr-suite.yml .
+RUN conda env create --file adfr-suite.yml
+RUN conda install -c conda-forge openbabel
 RUN chmod +x $VINA_BINARY
+
+# Determine which branch to build based on build-arg.
+FROM ${ALGORITHM}-build
+
 CMD python run.py ${ARGS}
