--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install Python 3
-        uses: actions/setup-python@v1
+      - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.7.12
+          auto-activate-base: true
+          activate-environment: ""
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip coverage
@@ -24,9 +24,7 @@ jobs:
           conda install -c conda-forge openbabel
           chmod +x nanome_docking/smina/smina_binary
           chmod +x nanome_docking/autodock4/vina_1.2.2_linux_x86_64
-          conda init
-          exec $SHELL
-          conda activate
+          echo $(which python)
 
       - name: Run tests.py
         run: coverage run --source=nanome_docking --omit nanome_docking/rhodium/calculations.py,nanome_docking/menus/DockingMenuRhodium.py -m unittest discover tests
