--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-activate-base: true
+          activate-environment: ""
       - name: Install dependencies
         run: |
           echo $(which python)
