Don't convert to conformers before uploading docking results
Co-authored-by: Alex McNerney <ajm13@users.noreply.github.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "program": "run.py",
             "console": "integratedTerminal",
-            "args": ["--algorithm", "smina", "-v", "-n", "[wip]-smina-docking"],
+            "args": ["--algorithm", "smina", "-v", "-r", "-n", "[wip]-smina-docking"],
             "justMyCode": false
         },
         {
