--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -6,10 +6,13 @@ on:
   pull_request:
     branches:
       - master
+  env:
+    DOCKER_BUILDKIT: 1
+  
 
 jobs:
   smina-unittests:
-    name: Run test suite
+    name: Smina Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -19,12 +22,5 @@ jobs:
     - name: Build docker image
       run: cd docker && ./build.sh --algorithm smina
 
-<<<<<<< HEAD
-      - name: Run tests.py
-        run: conda run -n base --live-stream coverage run --source=nanome_docking --omit nanome_docking/rhodium/calculations.py,nanome_docking/menus/DockingMenuRhodium.py -m unittest discover tests
-      - name: print coverage percentage
-        run: coverage report | grep TOTAL
-=======
     - name: Run tests
-      run: docker run --rm docking-smina python -m unittests discover tests.smina
->>>>>>> 534c572... add job to run smina tests
+      run: docker run --rm docking-smina python -m unittest discover tests.smina
