--- a/.github/workflows/registry-update.yml
+++ b/.github/workflows/registry-update.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
 jobs:
   smina:
     env:
@@ -30,7 +27,7 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build and Push Docking Smina to ECR public
+    - name: Build and Push docking-smina to ECR public
       id: build-and-push
       uses: pahud/ecr-public-action@8cd826db40befb59b0cd0b60b22a7ba72d06a7f7
       with:
@@ -60,7 +57,7 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build and Push Docking Smina to ECR public
+    - name: Build and Push docking-autodock4 to ECR public
       id: build-and-push
       uses: pahud/ecr-public-action@8cd826db40befb59b0cd0b60b22a7ba72d06a7f7
       with:
