--- a/.github/workflows/push-to-registry.yml
+++ b/.github/workflows/push-to-registry.yml
@@ -1,20 +1,24 @@
-name: Update ECR Registry
+name: Push to ECR Registry
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
 jobs:
-  smina:
-    env:
-      DOCKER_BUILDKIT: 1
-    name: Tag Smina latest
+  push-smina-to-registry:
+    name: Build Image
     runs-on: ubuntu-latest
     steps:
     - name: Get repo name
       id: repoName
       run: |
-        echo "::set-output name=repo_name::docking-smina"
+        prefix=nanome-ai/plugin-
+        git_repository="${{github.repository}}"
+        repo_name="${git_repository/#$prefix}-smina"
+        echo $repo_name
+        echo "::set-output name=repo_name::$(echo $repo_name)"
+    - name: Get short SHA
+      id: sha
+      run: echo "::set-output name=sha7::$(echo ${GITHUB_SHA} | cut -c1-7)"
     - name: Check out code
       uses: actions/checkout@v2
     - name: Configure AWS credentials
@@ -27,24 +31,30 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build and Push docking-smina to ECR public
+    - name: Build and Push to ECR public
       id: build-and-push
       uses: pahud/ecr-public-action@8cd826db40befb59b0cd0b60b22a7ba72d06a7f7
       with:
         dockerfile: docker/Dockerfile
-        context: .
+        context: . --algorithm smina
         tags: |
           public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:latest
-  tag-autodock4:
-    name: Tag Autodock4 latest
-    env:
-      DOCKER_BUILDKIT: 1
+          public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:${{ steps.sha.outputs.sha7 }}
+  push-autodock4-to-registry:
+    name: Build Image
     runs-on: ubuntu-latest
     steps:
     - name: Get repo name
       id: repoName
       run: |
-        echo "::set-output name=repo_name::docking-autodock4"
+        prefix=nanome-ai/plugin-
+        git_repository="${{github.repository}}"
+        repo_name="${git_repository/#$prefix}-autodock4"
+        echo $repo_name
+        echo "::set-output name=repo_name::$(echo $repo_name)"
+    - name: Get short SHA
+      id: sha
+      run: echo "::set-output name=sha7::$(echo ${GITHUB_SHA} | cut -c1-7)"
     - name: Check out code
       uses: actions/checkout@v2
     - name: Configure AWS credentials
@@ -57,11 +67,12 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build and Push docking-autodock4 to ECR public
+    - name: Build and Push to ECR public
       id: build-and-push
       uses: pahud/ecr-public-action@8cd826db40befb59b0cd0b60b22a7ba72d06a7f7
       with:
         dockerfile: docker/Dockerfile
-        context: --build-arg ALGORITHM=autodock4 .
+        context: . --algorithm autodock4
         tags: |
           public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:latest
+          public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:${{ steps.sha.outputs.sha7 }}
