--- a/.github/workflows/push-to-registry.yml
+++ b/.github/workflows/push-to-registry.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 jobs:
   push-smina-to-registry:
-    name: Build Image
+    name: Push docking-smina to ECR
     runs-on: ubuntu-latest
     steps:
     - name: Get repo name
@@ -31,7 +31,7 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build and Push to ECR public
+    - name: Push docking-autodock4 to ECR
       id: build-and-push
       uses: pahud/ecr-public-action@8cd826db40befb59b0cd0b60b22a7ba72d06a7f7
       with:
@@ -41,7 +41,7 @@ jobs:
           public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:latest
           public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:${{ steps.sha.outputs.sha7 }}
   push-autodock4-to-registry:
-    name: Build Image
+    name: Push docking-autodock4 to ECR
     runs-on: ubuntu-latest
     steps:
     - name: Get repo name
