Bug fixes and use Process API for Smina calculator (#31)
- Clean up job names in push-to-registry.yml
- Change No poses found message from exception to warning
- Add logs for most UI activity, for better insight into how things are used
- Fix bug in ligand dropdown when menu closed and reopened
- Use Process API for Smina Calculations (Autodock4 will be updated soon)

--- a/.github/workflows/push-to-registry.yml
+++ b/.github/workflows/push-to-registry.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 jobs:
   push-smina-to-registry:
-    name: Build Image
+    name: Push docking-smina to ECR
     runs-on: ubuntu-latest
     steps:
     - name: Get repo name
@@ -41,7 +41,7 @@ jobs:
           public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:latest
           public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:${{ steps.sha.outputs.sha7 }}
   push-autodock4-to-registry:
-    name: Build Image
+    name: Push docking-autodock4 to ECR
     runs-on: ubuntu-latest
     steps:
     - name: Get repo name
