Update dockerization and folder structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,4 @@ current_version = 0.2.1
 commit = True
 tag = True
 
-[bumpversion:file:nanome_docking/__init__.py]
+[bumpversion:file:plugin/__init__.py]
