Add back atom scores (#33)
* Turn residue/atom scoring back on

* Toggle atom labels

* Make sure autodock4 builds default to using autodock4 algorithm

* Fix starting frame on complex

* store docked complex indices instead of full structure

* Make sure autodock4 builds default to using autodock4 algorithm

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,5 +32,5 @@ RUN chmod +x $VINA_BINARY
 
 # Determine which branch to build based on build-arg.
 FROM ${ALGORITHM}-build
+CMD python run.py --algorithm ${ALGORITHM} ${ARGS}
 
-CMD python run.py ${ARGS}
