--- a/.github/workflows/bump-version-number.yml
+++ b/.github/workflows/bump-version-number.yml
@@ -38,89 +38,9 @@ jobs:
       - name: Push to GitHub
         run: |
           git push --follow-tags
-  push-smina-to-ecr:
-    runs-on: ubuntu-latest
+  push-to-ecr:
     needs: bump-version
-    steps:
-      # Push image to ECR and tag with new version number
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.NANOME_BOT_PAT }}
-      - name: git setup
-        run: |
-          git pull
-          git config --global user.name 'nanome-bot'
-          git config --global user.email '45469149+nanome-bot@users.noreply.github.com'
-      - name: get version number
-        id: new_version_number
-        run: |
-          new_ver=$(cat setup.cfg | grep current_version | awk -F "=" '{print $2}' | xargs)
-          echo "::set-output name=version_number::$(echo $new_ver)"
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-      - name: Get ECR repo name
-        id: repoName
-        run: |
-          prefix=nanome-ai/plugin-
-          git_repository="${{github.repository}}"
-          repo_name=${git_repository/#$prefix} 
-          echo $repo_name
-          echo "::set-output name=repo_name::$(echo $repo_name)"
-      - name: Build and Push Smina to ECR public
-        id: build-and-push
-        uses: pahud/ecr-public-action@8cd826db40befb59b0cd0b60b22a7ba72d06a7f7
-        with:
-          dockerfile: docker/Dockerfile
-          context: --build-arg ALGORITHM=smina .
-          tags: |
-            public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:${{ steps.new_version_number.outputs.version_number }}
-  push-autodock4-to-ecr:
-    runs-on: ubuntu-latest
-    needs: bump-version
-    steps:
-      # Push image to ECR and tag with new version number
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.NANOME_BOT_PAT }}
-      - name: git setup
-        run: |
-          git pull
-          git config --global user.name 'nanome-bot'
-          git config --global user.email '45469149+nanome-bot@users.noreply.github.com'
-      - name: get version number
-        id: new_version_number
-        run: |
-          new_ver=$(cat setup.cfg | grep current_version | awk -F "=" '{print $2}' | xargs)
-          echo "::set-output name=version_number::$(echo $new_ver)"
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-      - name: Get ECR repo name
-        id: repoName
-        run: |
-          prefix=nanome-ai/plugin-
-          git_repository="${{github.repository}}"
-          repo_name=${git_repository/#$prefix} 
-          echo $repo_name
-          echo "::set-output name=repo_name::$(echo $repo_name)"
-      - name: Build and Push Autodock4 to ECR
-        id: build-and-push
-        uses: pahud/ecr-public-action@8cd826db40befb59b0cd0b60b22a7ba72d06a7f7
-        with:
-          dockerfile: docker/Dockerfile
-          context: --build-arg ALGORITHM=autodock4 .
-          tags: |
-            public.ecr.aws/h7r1e4h2/${{ steps.repoName.outputs.repo_name }}:${{ steps.new_version_number.outputs.version_number }}
+    uses: ./.github/workflows/push-to-registry.yml
+    with:
+      tag: ${{needs.bump-version.outputs.version_number}}
+    secrets: inherit
