--- a/.github/workflows/push-to-registry.yml
+++ b/.github/workflows/push-to-registry.yml
@@ -45,7 +45,7 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
     - name: Build and Push to ECR public
       id: build-and-push
-      uses: pahud/ecr-public-action@8cd826db40befb59b0cd0b60b22a7ba72d06a7f7
+      uses: nanome-ai/ecr-public-action@8a5a154857f64bb4ac345eb1bc57661603b91ba9
       with:
         dockerfile: docker/Dockerfile
         context: --build-arg ALGORITHM=smina .
@@ -84,7 +84,7 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
     - name: Build and Push to ECR public
       id: build-and-push
-      uses: pahud/ecr-public-action@8cd826db40befb59b0cd0b60b22a7ba72d06a7f7
+      uses: nanome-ai/ecr-public-action@8a5a154857f64bb4ac345eb1bc57661603b91ba9
       with:
         dockerfile: docker/Dockerfile
         context: --build-arg ALGORITHM=autodock4 .
